tests/qd/compile_errors/undefined_constant.qd
// Test: using undefined constant

fn main() {
	UNDEFINED_CONST . nl
}
